[Exterior] Fix width of video on mobile

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -382,7 +382,7 @@ body {
                     }
                     
                     .videoContainer {
-                        // width: auto;
+                        width: auto;
                         height: 100vh;
                         &.lightsOff {
                             display: none;
